examples/hello.kaon
fun start() {
    do_something()
}

fun another_function() {
    some_function()
}

fun some_function() {
    var idx = 3
    io.println(list[idx]) // ok
    io.println(list[-2]) // ok
    //io.println(list[-6]) // ok
    io.println(list[-4]) // ok
    //io.println(list[-5]) // error
}

fun do_something() {
    another_function()
}

var list = [1, 2, 3, 4, 5]

start()